--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 :root {
 	--content-padding: 20px;
 	--app-header-vertical-padding: 75px;
-  --app-header-horizontal-padding: 10px;
+	--app-header-horizontal-padding: 10px;
 	--app-title-line-height: 10px;
 	--card-size: min(calc((100vw - var(--content-padding) * 2) / var(--card-columns)), calc((100vh - var(--content-padding) * 2 - var(--app-header-vertical-padding) * 2 - var(--app-title-line-height)) / var(--card-rows)));
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 	margin: 0;
 	font-family: 'Gill Sans';
@@ -27,8 +28,8 @@ html, body {
 	padding: var(--app-header-vertical-padding) var(--app-header-horizontal-padding);
 	display: flex;
 	color: black;
-  justify-content: center;
-  align-items: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .app-title {
@@ -38,8 +39,8 @@ html, body {
 }
 
 .restart-button {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .content {
@@ -69,12 +70,17 @@ html, body {
 	border-radius: 20%;
 	width: 100%;
 	height: 100%;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.card {
-  cursor: pointer;
+.card-front {
+	cursor: pointer;
 	background: red;
+}
+
+.card-back {
+	background-size: cover;
+	background-position: center;
 }
 
 .symbol {
