--- a/style.css
+++ b/style.css
@@ -1,43 +1,5 @@
-* {
-	box-sizing: border-box;
-}
-
-:root {
-    --content-padding: 20px;
-    --app-header-vertical-padding: 75px;
-    --app-header-horizontal-padding: 10px;
-    --app-title-line-height: 10px;
-    --card-size: min(calc((100vw - var(--content-padding) * 2) / var(--card-columns)), calc((100vh - var(--content-padding) * 2 - var(--app-header-vertical-padding) * 2 - var(--app-title-line-height)) / var(--card-rows)));
-}
-
-html,
-body {
-	height: 100%;
-	margin: 0;
+.game-title {
 	font-family: 'Gill Sans';
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.app {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-end;
-	height: 100%;
-}
-
-.app-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 100%;
-	padding: 10px;
-	margin-bottom: 20px;
-}
-
-.app-title {
 	font-weight: 700;
 	font-size: 40px;
 	color: black;
@@ -60,40 +22,26 @@ body {
 	height: 30px;
 }
 
-.content {
+.grid-container {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	flex: 1 1 auto;
-	padding: 20px;
-	overflow: hidden;
-	justify-content: center;
-}
 
-.cards {
-	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	max-width: 100%;
-	gap: 10px;
-}
-
-.cards-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: var(--card-size);
-	height: var(--card-size);
-	padding: 5%;
-}
-
-.cards-container > div {
-	border-radius: 20%;
 	width: 100%;
-	height: 100%;
-	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+	max-width: 800px;
+}
+
+.grid-item {
+	flex: 0 0 12.5%;
+	padding-bottom: 12.5%;
 	background-color: red;
+	border-radius: 30%;
+}
+
+@media (max-width: 600px) {
+	.grid-item {
+		flex-basis: 25%;
+		padding-bottom: 25%;
+	}
 }
 
 .card-front {
@@ -104,10 +52,4 @@ body {
 .card-back {
 	background-size: cover;
 	background-position: center;
-}
-
-.symbol {
-	justify-content: center;
-	align-items: center;
-	font-size: calc(var(--card-size) / 2);
 }
