--- a/style.css
+++ b/style.css
@@ -23,25 +23,16 @@
 }
 
 .grid-container {
-	display: flex;
-
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows: repeat(5, 1fr);
+	gap: 5px;
 	width: 100%;
-	max-width: 800px;
 }
 
 .grid-item {
-	flex: 0 0 12.5%;
-	padding-bottom: 12.5%;
 	background-color: red;
 	border-radius: 30%;
-}
-
-@media (max-width: 600px) {
-	.grid-item {
-		flex-basis: 25%;
-		padding-bottom: 25%;
-	}
 }
 
 .card-front {
