--- a/style.css
+++ b/style.css
@@ -23,16 +23,41 @@
 }
 
 .grid-container {
-	display: grid;
-	grid-template-columns: repeat(8, 1fr);
-	grid-template-rows: repeat(5, 1fr);
-	gap: 5px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-content: flex-start;
 	width: 100%;
+	max-width: 800px;
 }
 
 .grid-item {
 	background-color: red;
 	border-radius: 30%;
+	width: calc(20% - 10px);
+	padding-bottom: calc(20% - 10px);
+	margin-bottom: 10px;
+}
+
+@media (max-width: 800px) {
+	.grid-item {
+		width: calc(25% - 10px);
+		padding-bottom: calc(25% - 10px);
+	}
+}
+
+@media (max-width: 600px) {
+	.grid-item {
+		width: calc(33.33% - 10px);
+		padding-bottom: calc(33.33% - 10px);
+	}
+}
+
+@media (max-width: 400px) {
+	.grid-item {
+		width: calc(50% - 10px);
+		padding-bottom: calc(50% - 10px);
+	}
 }
 
 .card-front {
