--- a/style.css
+++ b/style.css
@@ -27,9 +27,23 @@ h1 {
 	font-size: 36px;
 }
 
-#score,
+#score-timer-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#score {
+	margin-right: 5px;
+}
+
+#score::after {
+	content: "|";
+	margin-left: 10px;
+}
+
 #timer {
-	margin-bottom: 10px;
+	margin-left: 5px;
 }
 
 #grid-container {
@@ -54,6 +68,7 @@ h1 {
 	justify-content: center;
 	width: 80px;
 	height: 80px;
+	cursor: pointer;
 }
 
 .grid-item::before {
