--- a/style.css
+++ b/style.css
@@ -117,6 +117,37 @@ div.card .front-side {
 }
 
 
+/* overlay */
+#overlay-container {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
+	z-index: 1;
+	align-items: center;
+	justify-content: center;
+}
+
+#overlay-content {
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	text-align: center;
+}
+
+#overlay-content h2 {
+	font-size: 24px;
+	margin-bottom: 10px;
+}
+
+#overlay-content p {
+	margin-bottom: 5px;
+}
+
+
 /* responsiveness 
 makes grid smaller and keeps the 8x5 grid */
 @media screen and (max-width: 900px) {
