--- a/style.css
+++ b/style.css
@@ -83,10 +83,6 @@ styling front and back */
 	visibility: visible;
 }
 
-.card.hidden {
-	visibility: hidden;
-}
-
 .card.flip .back-side {
 	transform: rotateY(180deg);
 	visibility: visible;
@@ -107,18 +103,17 @@ div.card .front-side {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: red !important;
+	background-color: white;
 	backface-visibility: hidden;
+	border-radius: 20%;
 }
 
 .card .back-side {
 	background-size: cover;
 	background-position: center;
-	background-color: white;
-}
-
-.card.matched {
-	visibility: hidden;
+	background-color: red;
+	border-radius: 20%;
+	symbols: hidden;
 }
 
 
@@ -130,7 +125,7 @@ div.card .front-side {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: white;
 	z-index: 1;
 	align-items: center;
 	justify-content: center;
@@ -138,7 +133,7 @@ div.card .front-side {
 
 #overlay-content {
 	background-color: white;
-	padding: 20px;
+	padding: 530px;
 	border-radius: 10px;
 	text-align: center;
 }
@@ -148,8 +143,24 @@ div.card .front-side {
 	margin-bottom: 10px;
 }
 
-#overlay-content p {
-	margin-bottom: 5px;
+/* placing score an time on the same line */
+#overlay-score-time {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  #overlay-score p {
+	margin-right: 5px;
+  }
+  
+  #overlay-score::after {
+	content: "|";
+	margin-left: 10px;
+  }
+
+#overlay-time {
+	margin-left: 5px;
 }
 
 
