--- a/style.css
+++ b/style.css
@@ -171,14 +171,26 @@ div.card .front-side {
 
 /* responsiveness 
 makes grid smaller and keeps the 8x5 grid */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 992px) {
 	#grid-container {
 		gap: 5px;
 		padding-top: 30px;
 	}
 
-	.grid-item {
-		width: 40px;
-		height: 40px;
+	.card {
+		width: 70px;
+		height: 70px;
+	}
+}
+
+@media screen and (max-width: 688px) {
+	#grid-container {
+		gap: 5px;
+		padding-top: 30px;
+	}
+
+	.card {
+		width: 50px;
+		height: 50px;
 	}
 }
