--- a/style.css
+++ b/style.css
@@ -74,18 +74,27 @@ sets columns to 8 and rows to 5 */
 styling front and back */
 .card {
 	position: relative;
-	width: 80px;
-	height: 80px;
+	width: 85px;
+	height: 85px;
 	border-radius: 20%;
 	cursor: pointer;
 	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-	background-color: red;
 	visibility: visible;
+	transform-style: preserve-3d;
+	/* enable 3D transforms */
+	transition: transform 0.6s;
+	/* transition effect for the flip animation */
 }
 
 /* Disable clicking on face-up cards */
 .card.face-up {
 	pointer-events: none;
+}
+
+.card.flipped {
+	background-color: white;
+	transform: rotateY(180deg);
+	/* flip the card to show the backside */
 }
 
 .card.flip .back-side {
@@ -100,9 +109,10 @@ styling front and back */
 	left: 0;
 	width: 100%;
 	height: 100%;
+	backface-visibility: hidden;
 }
 
-div.card .front-side {
+.card .front-side {
 	position: absolute;
 	top: 0;
 	left: 0;
