--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ styling front and back */
 }
 
 .card.flipped {
-	background-color: white;
+	/*background-color: white;*/
 	transform: rotateY(180deg);
 	/* flip the card to show the backside */
 }
@@ -102,7 +102,7 @@ styling front and back */
 	visibility: visible;
 }
 
-.card .front-side,
+/*.card .front-side,
 .card .back-side {
 	position: absolute;
 	top: 0;
@@ -110,7 +110,7 @@ styling front and back */
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
-}
+}*/
 
 .card .front-side {
 	position: absolute;
@@ -118,7 +118,7 @@ styling front and back */
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: white;
+	background-color: yellow;
 	backface-visibility: hidden;
 	border-radius: 20%;
 }
