--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ styling front and back */
 	visibility: visible;
 	transform-style: preserve-3d;
 	/* enable 3D transforms */
-	transition: transform 0.3s;
+	transition: transform 0.6s;
 	/* transition effect for the flip animation */
 }
 
@@ -96,12 +96,12 @@ styling front and back */
 	/* flip the card to show the backside */
 }
 
-.card.flipped .card-back {
+.card.flipped .back-side {
 	transform: rotateY(180deg);
 	visibility: visible;
 }
 
-.card .card-front {
+.card .front-side {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -110,17 +110,14 @@ styling front and back */
 	background-color: red;
 	backface-visibility: hidden;
 	border-radius: 20%;
-  }
-  
-  .card .card-back {
+}
+
+.card .back-side {
 	background-size: cover;
 	background-position: center;
 	border-radius: 20%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-repeat: no-repeat;
-  }
+	height: 100%;
+}
 
 
 /* overlay */
