--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ sets columns to 8 and rows to 5 */
 }
 
 
-/* add intitial dealing animation */
+/* intitial dealing animation */
 .deal-animation {
 	animation: deal 0.3s ease;
 }
@@ -78,6 +78,23 @@ sets columns to 8 and rows to 5 */
 @keyframes deal {
 	0% {
 		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+/* animation for matching cards */
+.match-animation{
+	animation: cardMatchAnimation 0.3s;
+}
+
+@keyframes cardMatchAnimation {
+	0% {
+		transform: scale(0);
+	}
+	50% {
+		transform: scale(1.2);
 	}
 	100% {
 		transform: scale(1);
